--- a/public/manifest.json
+++ b/public/manifest.json
@@ -8,33 +8,6 @@
   "background_color": "#ffffff",
   "scope": "/",
   "theme_color": "#0C27BE",
-  "orientation": "portrait",
-  "icons": [
-    {
-      "src": "/icons/icon-16x16.png",
-      "sizes": "16x16",
-      "type": "image/png"
-    },
-    {
-      "src": "/icons/icon-32x32.png",
-      "sizes": "32x32",
-      "type": "image/png"
-    },
-    {
-      "src": "/icons/icon-192x192.png",
-      "sizes": "192x192",
-      "type": "image/png"
-    },
-    {
-      "src": "/icons/icon-512x512.png",
-      "sizes": "512x512",
-      "type": "image/png"
-    },
-    {
-      "src": "/icons/maskable.png",
-      "sizes": "192x192",
-      "type": "image/png",
-      "purpose": "maskable"
-    }
-  ]
+  "orientation": "portrait"
+ 
 }
